--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-Hello World
+<html>
+<head>
+<title>
+This is Windard's Web
+</title>
+</head>
+<h1>Hello World</h1>
+<br>
+<p>
+It is easier than I thought.
+
+<h2>Github Page</h2>
+
+</p>
+</html>
