--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Windard.GitHub.io by windard</title>
+    <title>Windard Site</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
@@ -16,13 +16,14 @@
     <div class="wrapper">
       <header>
         <h1>Windard.GitHub.io</h1>
-        <p>My Windard Site</p>
+        <p>Windard Site</p>
 
-        <p class="view"><a href="test.md">Test</a></p>
+        <p class="view"><a href="http://simple.wenqiangyang.com">My Blog Website</a></p>
         <p class="view"><a href="https://github.com/windard">View My GitHub Profile</a></p>
+        <p class="view"><a href="https://windard.github.io/ife_task">IFE_TASK</a></p>
 
       </header>
-      <section>
+<!--       <section>
         <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
 
@@ -86,6 +87,14 @@ This is a test
 &lt;<span class="pl-ent">p</span>&gt; This is for test&lt;/<span class="pl-ent">p</span>&gt;
 &lt;/<span class="pl-ent">body</span>&gt;
 &lt;/<span class="pl-ent">index</span>&gt;</pre></div>
+      </section> -->
+      <section>
+        <h3>Hello Github Page</h3>
+        <p>
+        This is my Github Page default page,Github is good thing , I like it and it need it~.
+        </p>
+        <p>这是Github Page的默认页面，Github是个好东西，挺讨人喜欢的~~</p>
+
       </section>
       <footer>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
